src/styles/main-page-styles.css
p {
    margin: 0;
}

/* width */
::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
    background: #28bce8; 
    border-radius: 4px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #00d9ff; 
}

.page-container {
    /* background-image: url(../images/page-background2.jpg); */
    padding-top: 5%;
    padding-bottom: 5%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

.logo-container {
    text-align: center;
    margin-bottom: 2%;
}

.logo-link {
    display: inline;
}

.logo {
    width: 30%;
}

.sub-title-container {
    text-align: center;
    margin-bottom: 4%;
}

.sub-title {
    font-size: 3em;
    font-weight: 600;
    text-decoration: none;
    color: black;
}

.options-container {
    display: inline-block;
    width: 100%;
    margin-bottom: 1%;
}

.filter-container {
    float: left;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    width: 40%;
    margin-left: 15%;
}

.filter-button {
    /* background-color: #f1f1f1; */
    background-color: white;
    color: black;
    margin-right: 2%;
    width: 15%;
    height: 23px;
    border-radius: 3px;
    border-color: rgba(0, 0, 0, 0);
    transition: 150ms ease-in-out;
    outline: none;
    max-width: 76px;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.filter-button:hover {
    background-color: #c3f1ff;
    cursor: pointer;
}

.filter-button.selected {
    background-color: #5adaff;
    color: white;
}

.select-container {
    margin-top: 1%;
}

.top-sort {
    appearance: none;
    -webkit-appearance: none;
    border-radius: 3px;
    /* background-color: #f1f1f1; */
    background-color: white;
    color: black;
    border-color: rgba(0, 0, 0, 0);
    width: 22%;
    height: 23px;
    padding-left: 8px;
    outline: none;
    background-image: url(../images/down-arrow-white.svg);
    background-image: url(../images/down-arrow-black.svg);
    background-size: 20%;
    background-repeat: no-repeat;
    background-position: right center;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.subreddit-form-container {
    position: relative;
    float: right;
    width: 25%;
    margin-right: 15%;
    text-align: right;
}

.floating-r {
    position: absolute;
    left: 9%;
    top: 10%;
    font-size: 90%;
    /* font-weight: bold; */
    color: grey;
}

.subreddit-input {
    -webkit-appearance: none;
    border-radius: 4px;
    background-color: #f1f1f1;
    background-color: white;
    border-color: rgba(0, 0, 0, 0);
    color: black;
    outline: none;
    height: 17px;
    padding-left: 8%;
    width: 50%;
    font-size: 80%;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 
    0 3px 1px -2px rgba(0,0,0,.12), 
    0 1px 5px 0 rgba(0,0,0,.2);
}

.browse-button {
    background-color: white;
    /* background-color: #f1f1f1; */
    border-color: rgba(0, 0, 0, 0);
    color: black;
    border-radius: 3px;
    border-color: rgba(0, 0, 0, 0);
    -webkit-transition: 100ms ease-in-out;
    -o-transition: 100ms ease-in-out;
    transition: 150ms ease-in-out;
    outline: none;
    height: 23px;
    width: 30%;
    margin-left: 4%;
    vertical-align: top;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.browse-button:hover {
    background-color: #c3f1ff;
    cursor: pointer;
}

.post-loader-container {
    width: 57px;
    font-size: 0;
    margin: 0 auto;
    margin-top: 5%;
    margin-bottom: 30%;
}

.no-posts-container {
    display: block;
    position: relative;
    width: 40%;
    margin: 0 auto;
    padding: 1%;
    padding-bottom: 1%;
    margin-bottom: 20%;
    margin-top: 2%;
    overflow: hidden;
    background-color: white;
    border-radius: 4px;
    color: black;
    background: white;
    /* transition: 500ms ease-in-out; */
    text-align: center;
    font-size: 150%;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.no-posts-message {
    display: inline-block;
    width: 86%;
}

.sad-face-img {
    width: 25%;
    margin-top: 2%;
}

.horizontal-line {
    border-bottom: 1px solid black;
    margin: 3% auto;
    width: 50%;
}

.suggestion-loader-container {
    width: 57px;
    font-size: 0;
    margin: 0 auto;
    margin-top: 5%;
}

.suggestions-container {
    display: inline-block;
    width: 100%;
    margin-top: 3%;
}

.sub-suggestion-container {
    border-radius: 4px;
    margin-bottom: 2.5%;
    margin-right: 2%;
    display: inline-block;
    width: 45%;
    height: 25px;
    padding: .5% 1%;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 
                0 3px 1px -2px rgba(0,0,0,.12), 
                0 1px 5px 0 rgba(0,0,0,.2);
}

.sub-suggestion-container:hover {
    background-color: #c3f1ff;
    cursor: pointer;
    transition: 150ms ease-in-out;
}

.sub-suggestion {
    position: relative;
    top: 17%;
    font-size: 60%;
}

.post-container {
    display: block;
    position: relative;
    width: 70%;
    min-width: 710px;
    margin: 0 auto;
    padding: 1%;
    padding-bottom: 1%;
    margin-bottom: 1%;
    overflow: hidden;
    border-radius: 4px;
    color: black;
    /* background: #f1f1f1; */
    background: white;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.highlighted-post {
    /* border-right: 2px solid #949494;
    border-left: 2px solid #949494; */
    /* border: 2px solid #949494; */
    /* border-top: 2px solid #d0d0d0; */
    box-shadow: 0 4px 8px 0 rgba(0,0,0,.2);
    transition: 400ms ease-in-out;
}

.animation-styles {
    animation-duration: 1s;
    -webkit-animation-duration: 1s;
    -moz-animation-duration: 1s;
}

.post-header {
    margin-bottom: 2%;
}

.thumbnail {
    float: left;
    margin-right: 2%;
    margin-top: 0.5%;
    width: 80px;
    font-size: 0%;
    overflow: hidden;
    background-color: white;
    border-radius: 4px;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.thumbnail-img {
    height: 80px;
    width: 80px;
}

.post-info {
    overflow: hidden;
    display: inline-block;
    width: 75%;
}

.post-title {
    font-family: 'Poppins', sans-serif;
    text-decoration: none;
    color: inherit;
    font-size: 1.2em;
    display: inline-block;
}

.post-title:visited {
    color: #6b6b6b;
}

.author {
    font-size: 0.7em;
    margin-right: 1.5%;
    display: inline-block;
}

.author-link {
    text-decoration: underline;
    color: black;
}

.domain {
    display: inline-block;
    font-size: 0.7em;
    margin-bottom: 0.5%;
    width: 60%;
}

.posted {
    font-size: 0.7em;
    display: inline-block;
}

.comments-link {
    font-size: 0.7em;
    color: black;
    display: inline-block;
    width: 100%;
}

.subreddit-container {
    display: inline-block;
    width: 60%;
    margin-left: 2%;
}

.subreddit {
    font-size: 0.7em;
    display: inline-block;
}

.subreddit-link {
    font-size: 0.7em;
    display: inline-block;
    margin-left: 2%;
    text-decoration: underline;
    vertical-align: top;
    padding-top: 3px;
}

.subreddit-link:hover {
    cursor: pointer;
}

.pinned {
    color: #02a702;
    font-size: 0.7em;
    display: inline-block;
}

.spoilers {
    color: #cac700;
    font-size: 0.7em;
    display: inline-block;
}

.nsfw {
    color: #e704b6;
    font-size: 0.7em;
    display: inline-block;
}

.points-container {
    float: right;
    height: 76px;
    width: 76px;
    text-align: center;
    margin-top: 0.5%;
    color: black;
    border-radius: 4px;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
}

.points-label {
    font-family: 'Teko', sans-serif;
    font-size: 150%;
    color: rgb(138, 138, 138);
}

.points {
    font-family: 'Teko', sans-serif;
    font-size: 150%;
}

.expand-post-button {
    background-color: #00000000;
    border: none;
    color: #28bce8;
    width: 100%;
    height: 35px;
    padding-top: 0.5%;
    outline: none;
    position: absolute;
    left: 0;
    bottom: 0;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    font-size: 150%;
    transition: 150ms ease-in-out;

    /* background-image: linear-gradient(#00000000, #bbbbbb4f);
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: 0% 100%;
    transition: background-size .5s, color .5s;     */
}

.expand-post-button:hover {
    cursor: pointer;
    color: #5ddb63;
    /* background-size: 100% 100%; */
}

.expand-post-button.in-post {
    margin: 0 auto;
    margin-top: 2%;
    color: #5ddb63;
}

.expand-post-button.in-post:hover {
    color: #28bce8;
}

.comment-loader-container {
    width: 57px;
    font-size: 0;
    margin: 0 auto;
}

.not-expanded {
    display: none;
}

.expanded {
    display: block;
}

.post-body-container {
    padding: 2%;
    width: 91%;
    color: black;
    margin: 0 auto;
    border-radius: 4px;
    /* border: 2px solid white; */
    margin-bottom: 4%;
    margin-top: 2%;
    /* max-height: 340px; */
    /* overflow-y: scroll; */
}

/* width */
.post-body-container::-webkit-scrollbar {
    width: 10px;
}

/* Track */
.post-body-container::-webkit-scrollbar-track {
    background: #00000000; 
}
 
/* Handle */
.post-body-container::-webkit-scrollbar-thumb {
    background: #28bce8; 
    border-radius: 4px;
}

/* Handle on hover */
.post-body-container::-webkit-scrollbar-thumb:hover {
    background: #00d9ff; 
}

.post-body-container p {
    margin-top: 1%;
    margin-bottom: 1%;
}

.post-body-container a {
    color: #6c7db8;
}

.post-body-container a:visited {
    color: #4562cc;
}

.nav-container {
    position: relative;
    text-align: center;
    margin-top: 4%;
}

.nav-icon-container {
    display: inline-block;
}

.nav-icon {
    height: auto;
    transition: transform 200ms ease-in-out;
}

.nav-icon.left {
    transform: rotate(180deg);
}

.nav-icon.right:hover {
    cursor: pointer;
    transform: translateX(3px);
}

.nav-icon.left:hover {
    cursor: pointer;
    transform:  rotate(180deg) translateX(3px);
}

.page-number-container {
    display: inline-block;
    margin-right: 1%;
    margin-left: 4%;
}

.page-number {
    position: absolute;
    font-family: 'Teko', sans-serif;
    font-size: 2em;
    bottom: -26%;
    left: 49.5%;
    color: black;
}

.md-spoiler-text {
    color: rgb(71, 71, 71);
    background-color: rgb(71, 71, 71);
}

.md-spoiler-text:hover {
    background-color: transparent;
    color: white;
}

